cmake_minimum_required(VERSION 3.10)
project(cop3014_lab09_pointer)

set(CMAKE_CXX_STANDARD 11)

add_executable(9-1.exe 9-1.cpp)
add_executable(9-2.exe 9-2.cpp)
add_executable(9-3.exe 9-3.cpp)
add_executable(darray.exe darray.cpp)
add_executable(dynamic.exe dynamic.cpp)
add_executable(pointers.exe pointers.cpp)
